--- a/src/index.css
+++ b/src/index.css
@@ -39,12 +39,15 @@
     padding: 10px 16px;
     margin: 20px 0;
     border-bottom: 1px solid #fafafa;
+    text-decoration: none;
   }
-  
+
   .blog-preview:hover{
     box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
   }
-  
+  .blog-preview a{
+    text-decoration: none;
+  }
   .blog-preview h2{
     font-size: 20px;
     color: #f1356d;
@@ -61,3 +64,22 @@
     margin:0 auto;
   }
   
+  .blog-details h2{
+    font-size: 20px;
+    color: #f1356d;
+    margin-bottom: 10px;
+  }
+  
+  .blog-details div{
+    margin:20px 0;
+    text-align: justify;
+  }
+  
+  .blog-details button{
+    background: #f1356d;
+    color: #fff;
+    border:0;
+    padding: 8px;
+    border-radius: 8px;
+    cursor: pointer;
+  }
